--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "mcp:mongodb": "node mcp/mongodb-server.js",
+    "mcp:railway": "node mcp/railway-server.js",
     "bot:start": "pm2 start ecosystem.config.js",
     "bot:stop": "pm2 stop ecosystem.config.js",
     "bot:restart": "pm2 restart ecosystem.config.js",
@@ -32,6 +33,7 @@
     "axios": "^1.6.2",
     "discord.js": "^14.25.0",
     "dotenv": "^16.3.1",
+    "ffmpeg-static": "^5.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^7.0.0",
