--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@modelcontextprotocol/sdk": "^1.23.0",
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.6.2",
+    "canvas": "^3.2.0",
+    "discord-interactions": "^4.4.0",
     "discord.js": "^14.25.0",
     "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.3.0",
